--- a/src/components/layout/BaseHead.astro
+++ b/src/components/layout/BaseHead.astro
@@ -2,6 +2,7 @@
 import LocalFont from '../generic/LocalFont.astro';
 import { ViewTransitions } from 'astro:transitions';
 
+
 interface Props {
   title: string;
   description: string;
@@ -9,9 +10,10 @@ interface Props {
 }
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
+const base = import.meta.env.BASE_URL || '/';
 
 if (Astro.props.ogImage === undefined) {
-  Astro.props.ogImage = new URL('/v1/generate/og/default.png', Astro.url);
+  Astro.props.ogImage = new URL(`${base}/v1/generate/og/default.png`, Astro.url);
 }
 
 const { title, description, ogImage } = Astro.props;
@@ -40,7 +42,7 @@ const { title, description, ogImage } = Astro.props;
   <meta property='twitter:image' content={ogImage} />
 
   <link rel='canonical' href={canonicalURL} />
-  <link rel='icon' type='image/svg' href='favicon.png' />
+  <link rel='icon' type='image/svg' href=`${base}/favicon.png` />
 
   <title>{title}</title>
 
