--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -57,6 +57,7 @@ const boroughs = [...new Set(sortedProjects.map(project => project.data.borough)
           height="450px" 
           mapId="projects-page-map"
           bidToSlugMap={bidToSlugMap}
+          disableLongPress={true}
         />
       </div>
     </div>
